# cpp-win-template

./: CMakeLists.txt  README.md  master.py
base/: CMakeLists.txt
base/include/maths/: vec2.hxx
base/src/maths/: vec2.cxx
